# vs2

./: .gitignore  LICENSE  README.md  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml
Backup/: .devcontainer.json  CMakeLists.txt  Dockerfile  conanfile.txt  main.cpp
Durchschnittsgeschwindigkeit/: .devcontainer.json  CMakeLists.txt  Dockerfile  main.cpp
Durchschnittsgeschwindigkeit/src/: Durchschnittsgeschwindigkeit.h  DurchschnittsgeschwindigkeitMQTT.h  DurchschnittsgeschwindigkeitUDP.h
Durchschnittsgeschwindigkeit/src/tests/: Durchschnittsgeschwindigkeit.cpp
Fuellstand/: .devcontainer.json  CMakeLists.txt  Dockerfile  main.cpp
Fuellstand/src/: Fuellstand.h  FuellstandMQTT.h  FuellstandUDP.h
Fuellstand/src/tests/: Fuellstand.cpp
Kilometerstand/: .devcontainer.json  .dockerignore  CMakeLists.txt  Dockerfile  main.cpp
Kilometerstand/src/: Kilometerstand.h  KilometerstandMQTT.h  KilometerstandUDP.h
Kilometerstand/src/tests/: Kilometerstand.cpp
Libary/: History.h  Server.h  message.pb.cc  message.pb.h  message.proto  serialize.h
Libary/REST/: Path.h  PathValue.h  Segment.h
Libary/TCP/: TCPClient.h  TCPRequest.h  TCPResponse.h  TCPServer.h
Libary/UDP/: UDPResponse.h  UDPServer.h
Server/: .devcontainer.json  .dockerignore  CMakeLists.txt  Dockerfile  conanfile.txt  main.cpp
Verkehrssituation/: .devcontainer.json  .dockerignore  CMakeLists.txt  Dockerfile  conanfile.txt  main.cpp  message.pb.cc
Verkehrssituation/src/: Verkehrssituation.h  VerkehrssituationMQTT.h  VerkehrssituationUDP.h
Verkehrssituation/src/tests/: Verkehrssituation.cpp
Webseite/: .dockerignore  Dockerfile  package-lock.json  package.json
Webseite/public/: index.html
Webseite/src/: App.vue  main.ts
Webseite/src/assets/: index.scss
Webseite/src/components/: LoadingCircle.vue
Webseite/src/router/: index.ts
Webseite/src/store/: index.ts
Webseite/src/views/: Durchschnittsgeschwindigkeit.vue  Fuellstand.vue  Kilometerstand.vue  Verkehrssituation.vue  Zentrale.vue
Zentrale/: .devcontainer.json  CMakeLists.txt  Dockerfile  conanfile.txt  main.cpp
Zentrale/src/headquarter/: Headquarter.h  HeadquarterMQTT.h  HeadquarterUDP.h
